# fastapi-hello

./: .dockerignore  .env.example  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: docker-build.yml
app/: config.py  logging.py  main.py
app/api/: chat.py  health.py
app/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
app/schemas/: chat.py
tests/: test_chat.py  test_main.py
